// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockWidthRestrictor should render correctly 1`] = `
<div>
  <div
    class="BlockWidthRestrictor"
  >
    Some children
  </div>
</div>
`;

exports[`BlockWidthRestrictor should render correctly when element type is defined 1`] = `
<div>
  <nav
    class="BlockWidthRestrictor"
  >
    Some children
  </nav>
</div>
`;
